# DecentriLearn

bare_bones/: averager.py  main.py  main_fedamp.py  main_fedprox.py  main_pfed_me.py  trainer.py
custom_flwr_stimulation/: final_model.pt  pyproject.toml
custom_flwr_stimulation/custom_start/: client_app.py  server_app.py  task.py
