[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom_start"
version = "1.0"
description = "Federated Learning trial with MNIST-10-digit-10-devices"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Penguin Labs"

[tool.flwr.app.components]
serverapp = "custom_start.server_app:app"
clientapp = "custom_start.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# # This tells Flower which federation to use by default
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# # This defines the number of virtual devices for your MNIST project
# options.num-supernodes = 10
